--- a/public/index.html
+++ b/public/index.html
@@ -2,159 +2,165 @@
 <html>
 
     <head>
+        <link rel="stylesheet" type="text/css" href="simple_style.css">
         <title>岡竜之介ポートフォリオサイト</title>
     </head>
 
     <body>
         <section id="about_section">
             <h1>About</h1>
-            <div id="photo">
-                <img src="assets/assets/profile_image.png">
+            <div class="section_wrapper">
+                <div id="photo">
+                    <img src="assets/assets/profile_image.png">
+                </div>
+                <div id="name">
+                    岡竜之介
+                </div>
+                <div id="educational_background">
+                    東京大学工学部卒
+                </div>
+                <div id="skills">
+                    <h2>Skills</h2>
+                    <ul>
+                        <li>Flutter(Dart)</li>
+                        <li>Firebase</li>
+                        <li>Rust</li>
+                        <li>C++</li>
+                        <li>Haskell</li>
+                        <li>Angular(JavaScript/TypeScript)</li>
+                        <li>Django(Python)</li>
+                        <li>数学・物理・統計・英語・etc...</li>
+                    </ul>
+                </div>
+                <div id="work_history">
+                    <h2>Work History</h2>
+                    <ul>
+                        <li>渋谷のITベンチャーにて広告運用・SEO(1年半)</li>
+                        <li>大手塾講師(5年目)</li>
+                    </ul>
+                </div>
+                <div id="qualifications">
+                    <h2>Qualifications</h2>
+                    <ul>
+                        <li>統計検定 準一級</li>
+                        <li>TOEIC R/W 770</li>
+                        <li><a href="https://atcoder.jp/users/agajo" target="_blank">AtCoder水色(Rust, C++)</a></li>
+                        <li>日商簿記 三級</li>
+                    </ul>
+                </div>
+                <div id="personality">
+                    <h2>Personality</h2>
+                    <ul>
+                        <li>自分のスキルアップに余念がない。</li>
+                        <li>多趣味。何かができるようになるのが楽しくてたまらない。</li>
+                        <li>MBTIはENTP。</li>
+                        <li>最近はバク転・バク宙ができるようになりました。</li>
+                        <li>圏論とブロックチェーン(Ethereum)を勉強中です。</li>
+                        <li>インプットが楽しすぎてアウトプットが疎かになりがちなのが弱点。誰かに管理してもらうことで解決可能です。</li>
+                        <li>デザインも勉強しましたが苦手です。</li>
+                    </ul>
+                </div>
             </div>
-            <div id="name">
-                岡竜之介
-            </div>
-            <div id="educational_background">
-                東京大学工学部卒
-            </div>
-            <div id="skills">
-                <h2>skills</h2>
-                <ul>
-                    <li>Flutter(Dart)</li>
-                    <li>Firebase</li>
-                    <li>Rust</li>
-                    <li>C++</li>
-                    <li>Haskell</li>
-                    <li>Angular(JavaScript/TypeScript></li>
-                    <li>Django(Python)</li>
-                    <li>数学・物理・統計・etc...</li>
-                </ul>
-            </div>
-            <div id="work_history">
-                <h2>Work History</h2>
-                <ul>
-                    <li>渋谷のITベンチャーにて広告運用・SEO(1年半)</li>
-                    <li>大手塾講師(5年目)</li>
-                </ul>
-            </div>
-            <div id="qualifications">
-                <h2>Qualifications</h2>
-                <ul>
-                    <li>統計検定 準一級</li>
-                    <li>TOEIC R/W 770</li>
-                    <li><a href="https://atcoder.jp/users/agajo" target="_blank">AtCoder水色(Rust, C++)</a></li>
-                    <li>日商簿記 三級</li>
-                </ul>
-            </div>
-            <div id="personality">
-                <h2>Personality</h2>
-                自分のスキルアップに余念がない。<br>
-                多趣味。何かができるようになるのが楽しくてたまらない。<br>
-                MBTIはENTP。<br>
-                最近はバク転・バク宙ができるようになりました。<br>
-                圏論とブロックチェーン(Ethereum)を勉強中です。<br>
-                インプットが楽しすぎてアウトプットが疎かになりがちなのが弱点。誰かに管理してもらうことで解決可能です。<br>
-                デザインも勉強しましたが苦手です。
-            </div>
-
         </section>
         <section id="works_section">
             <h1>Works</h1>
-            <div id="web_services">
-                <h2>Web Services</h2>
-                <ul>
-                    <li>
-                        <a>フリックとローマジ(タイピング速度測定ゲーム)</a>
-                    </li>
-                    <li>
-                        <a>数式画像化</a>
-                    </li>
-                </ul>
-            </div>
-            <div id="mobile_apps">
-                <h2>Mobile Apps</h2>
-                <ul>
-                    <li>平均計算機〜先生・講師用〜<a
-                            href="https://play.google.com/store/apps/details?id=oka_ryunoske.work.average_calculator.app&hl=ja&gl=US"
-                            target="_blank">Android</a><a
-                            href="https://apps.apple.com/jp/app/%E5%B9%B3%E5%9D%87%E7%82%B9%E8%A8%88%E7%AE%97%E6%A9%9F-%E5%85%88%E7%94%9F-%E8%AC%9B%E5%B8%AB%E7%94%A8/id1440775169"
-                            target="_blank">iOS</a></li>
-                    <li>ベズー計算トレーニング<a
-                            href="https://play.google.com/store/apps/details?id=work.okaryunoske.bezout_identity_challenge&hl=ja&gl=US"
-                            target="_blank">Android</a><a
-                            href="https://apps.apple.com/jp/app/%E3%83%99%E3%82%BA%E3%83%BC%E8%A8%88%E7%AE%97%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1531047598"
-                            target="_blank">iOS</a></li>
-                    <li>気まぐれタイマー<a
-                            href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.randomtimer&hl=ja&gl=US"
-                            target="_blank">Android</a><a
-                            href="https://apps.apple.com/jp/app/%E6%B0%97%E3%81%BE%E3%81%90%E3%82%8C%E3%82%BF%E3%82%A4%E3%83%9E%E3%83%BC/id1455831717"
-                            target="_blank">iOS</a></li>
-                    <li>縛りカラオケお題マシーン<a
-                            href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.karaoke_odai&hl=ja&gl=US"
-                            target="_blank">Android</a><a
-                            href="https://apps.apple.com/jp/app/%E7%B8%9B%E3%82%8A%E3%82%AB%E3%83%A9%E3%82%AA%E3%82%B1%E3%81%8A%E9%A1%8C%E3%83%9E%E3%82%B7%E3%83%BC%E3%83%B3-%E6%9D%A1%E4%BB%B6%E9%81%B8%E6%9B%B2%E3%81%A7%E7%9B%9B%E3%82%8A%E4%B8%8A%E3%81%8C%E3%82%8D%E3%81%86/id1462261220"
-                            target="_blank">iOS</a></li>
-                    <li>パスワード計算機<a
-                            href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.password_calculator_flutter&hl=ja&gl=US"
-                            target="_blank">Android</a><a
-                            href="https://apps.apple.com/jp/app/%E3%83%91%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%89%E8%A8%88%E7%AE%97%E6%A9%9F/id1492432603"
-                            target="_blank">iOS</a></li>
-                    <li>監視しあう会<a
-                            href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.procrastinators_watch_mutually&hl=ja&gl=US"
-                            target="_blank">Android</a><a
-                            href="https://apps.apple.com/jp/app/%E7%9B%A3%E8%A6%96%E3%81%97%E5%90%88%E3%81%86%E4%BC%9A/id1507154418"
-                            target="_blank">iOS</a></li>
-                    <li>フリックとローマジ<a
-                            href="https://play.google.com/store/apps/details?id=oka_ryunoske.work.flickromaji.app&hl=ja&gl=US"
-                            target="_blank">Android</a><a
-                            href="https://apps.apple.com/jp/app/%E3%83%95%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%83%BC%E3%83%9E%E3%82%B8-%E6%97%A5%E6%9C%AC%E8%AA%9E%E5%85%A5%E5%8A%9B%E3%82%B9%E3%83%94%E3%83%BC%E3%83%89%E6%B8%AC%E5%AE%9A/id1441275882"
-                            target="_blank">iOS</a></li>
-                </ul>
-            </div>
-            <div id="Open Source Softwares">
-                <h2>Open Source Softwares(Flutter Libraries)</h2>
-                <ul>
-                    <li><a href="https://pub.dev/packages/screenshot_maker" target="_blank">screenshot_maker</a></li>
-                    <li><a href="https://pub.dev/packages/admob_banner_stabilizer"
-                            target="_blank">admob_banner_stabilizer</a></li>
-                    <li><a href="https://pub.dev/packages/decorated_text" target="_blank">decorated_text</a></li>
-                </ul>
-            </div>
-            <div id="articles">
-                <h2>Articles</h2>
-                <ul>
-                    <li><a href="https://qiita.com/agajo/items/7942743a0130f7a0f30b" target="_blank">RxJSの基礎中の基礎</a>
-                    </li>
-                    <li><a href="https://qiita.com/agajo/items/73ec7651747956439f7e"
-                            target="_blank">Promise・Observable・async/await で同じ事をやってみて違いを理解しよう</a></li>
-                    <li><a href="https://qiita.com/agajo/items/50d5d7497d28730de1d3" target="_blank">Flutterの状態管理いろいろ比較
-                            〜グローバル変数StateからBLoCパターンまで〜</a></li>
-                    <li><a href="https://qiita.com/agajo/items/93d75aafe87bdc7b2026"
-                            target="_blank">Flutterのcontextの「お気持ち」を理解する</a></li>
-                    <li><a href="https://qiita.com/agajo/items/41f518647605753a8c0a"
-                            target="_blank">パスワード管理ってみんなどうしてるの？？こうするといいと思うよ！</a></li>
-                    <li><a href="https://qiita.com/agajo/items/10beec201c3284294450"
-                            target="_blank">【個人開発】FlutterとFirebaseでサボり防止アプリを作った</a></li>
-                    <li><a href="https://qiita.com/agajo/items/4e0fa344dd6c1a36c937"
-                            target="_blank">FlutterのThemeに任せてMaterial Designを適用する</a></li>
-                    <li><a href="" target="_blank"></a></li>
-                </ul>
-            </div>
-            <div id="movies">
-                <h2>Movies</h2>
-                <ul>
-                    <li><a href="https://www.youtube.com/channel/UCucOfFcRptENgTkPmW193HQ/videos"
-                            target="_blank">統計学動画シリーズ</a></li>
-                </ul>
+            <div class="section_wrapper">
+
+                <div id="web_services">
+                    <h2>Web Services</h2>
+                    <ul>
+                        <li>
+                            <a href="https://flickromaji.oka-ryunoske.work/" target="_blank">フリックとローマジ(タイピング速度測定ゲーム)</a>
+                        </li>
+                        <li>
+                            <a href="https://math-formula-image.oka-ryunoske.work/ja.html"
+                                target="_blank">数式入りの短い文章をブラウザ上でパパっと画像化</a>
+                        </li>
+                    </ul>
+                </div>
+                <div id="mobile_apps">
+                    <h2>Mobile Apps</h2>
+                    <ul>
+                        <li><a href="https://play.google.com/store/apps/details?id=oka_ryunoske.work.average_calculator.app&hl=ja&gl=US"
+                                target="_blank">Android</a> <a
+                                href="https://apps.apple.com/jp/app/%E5%B9%B3%E5%9D%87%E7%82%B9%E8%A8%88%E7%AE%97%E6%A9%9F-%E5%85%88%E7%94%9F-%E8%AC%9B%E5%B8%AB%E7%94%A8/id1440775169"
+                                target="_blank">iOS</a> 平均計算機〜先生・講師用〜</li>
+                        <li><a href="https://play.google.com/store/apps/details?id=work.okaryunoske.bezout_identity_challenge&hl=ja&gl=US"
+                                target="_blank">Android</a> <a
+                                href="https://apps.apple.com/jp/app/%E3%83%99%E3%82%BA%E3%83%BC%E8%A8%88%E7%AE%97%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1531047598"
+                                target="_blank">iOS</a> ベズー計算トレーニング</li>
+                        <li><a href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.randomtimer&hl=ja&gl=US"
+                                target="_blank">Android</a> <a
+                                href="https://apps.apple.com/jp/app/%E6%B0%97%E3%81%BE%E3%81%90%E3%82%8C%E3%82%BF%E3%82%A4%E3%83%9E%E3%83%BC/id1455831717"
+                                target="_blank">iOS</a> 気まぐれタイマー</li>
+                        <li><a href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.karaoke_odai&hl=ja&gl=US"
+                                target="_blank">Android</a> <a
+                                href="https://apps.apple.com/jp/app/%E7%B8%9B%E3%82%8A%E3%82%AB%E3%83%A9%E3%82%AA%E3%82%B1%E3%81%8A%E9%A1%8C%E3%83%9E%E3%82%B7%E3%83%BC%E3%83%B3-%E6%9D%A1%E4%BB%B6%E9%81%B8%E6%9B%B2%E3%81%A7%E7%9B%9B%E3%82%8A%E4%B8%8A%E3%81%8C%E3%82%8D%E3%81%86/id1462261220"
+                                target="_blank">iOS</a> 縛りカラオケお題マシーン</li>
+                        <li><a href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.password_calculator_flutter&hl=ja&gl=US"
+                                target="_blank">Android</a> <a
+                                href="https://apps.apple.com/jp/app/%E3%83%91%E3%82%B9%E3%83%AF%E3%83%BC%E3%83%89%E8%A8%88%E7%AE%97%E6%A9%9F/id1492432603"
+                                target="_blank">iOS</a> パスワード計算機</li>
+                        <li><a href="https://play.google.com/store/apps/details?id=work.oka_ryunoske.procrastinators_watch_mutually&hl=ja&gl=US"
+                                target="_blank">Android</a> <a
+                                href="https://apps.apple.com/jp/app/%E7%9B%A3%E8%A6%96%E3%81%97%E5%90%88%E3%81%86%E4%BC%9A/id1507154418"
+                                target="_blank">iOS</a> 監視しあう会</li>
+                        <li><a href="https://play.google.com/store/apps/details?id=oka_ryunoske.work.flickromaji.app&hl=ja&gl=US"
+                                target="_blank">Android</a> <a
+                                href="https://apps.apple.com/jp/app/%E3%83%95%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%83%BC%E3%83%9E%E3%82%B8-%E6%97%A5%E6%9C%AC%E8%AA%9E%E5%85%A5%E5%8A%9B%E3%82%B9%E3%83%94%E3%83%BC%E3%83%89%E6%B8%AC%E5%AE%9A/id1441275882"
+                                target="_blank">iOS</a> フリックとローマジ</li>
+                    </ul>
+                </div>
+                <div id="Open Source Softwares">
+                    <h2>Open Source Softwares(Flutter Libraries)</h2>
+                    <ul>
+                        <li><a href="https://pub.dev/packages/screenshot_maker" target="_blank">screenshot_maker</a>
+                        </li>
+                        <li><a href="https://pub.dev/packages/admob_banner_stabilizer"
+                                target="_blank">admob_banner_stabilizer</a></li>
+                        <li><a href="https://pub.dev/packages/decorated_text" target="_blank">decorated_text</a></li>
+                    </ul>
+                </div>
+                <div id="articles">
+                    <h2>Articles</h2>
+                    <ul>
+                        <li><a href="https://qiita.com/agajo/items/7942743a0130f7a0f30b" target="_blank">RxJSの基礎中の基礎</a>
+                        </li>
+                        <li><a href="https://qiita.com/agajo/items/73ec7651747956439f7e"
+                                target="_blank">Promise・Observable・async/await で同じ事をやってみて違いを理解しよう</a></li>
+                        <li><a href="https://qiita.com/agajo/items/50d5d7497d28730de1d3"
+                                target="_blank">Flutterの状態管理いろいろ比較
+                                〜グローバル変数StateからBLoCパターンまで〜</a></li>
+                        <li><a href="https://qiita.com/agajo/items/93d75aafe87bdc7b2026"
+                                target="_blank">Flutterのcontextの「お気持ち」を理解する</a></li>
+                        <li><a href="https://qiita.com/agajo/items/41f518647605753a8c0a"
+                                target="_blank">パスワード管理ってみんなどうしてるの？？こうするといいと思うよ！</a></li>
+                        <li><a href="https://qiita.com/agajo/items/10beec201c3284294450"
+                                target="_blank">【個人開発】FlutterとFirebaseでサボり防止アプリを作った</a></li>
+                        <li><a href="https://qiita.com/agajo/items/4e0fa344dd6c1a36c937"
+                                target="_blank">FlutterのThemeに任せてMaterial Designを適用する</a></li>
+                    </ul>
+                </div>
+                <div id="movies">
+                    <h2>Movies</h2>
+                    <ul>
+                        <li><a href="https://www.youtube.com/channel/UCucOfFcRptENgTkPmW193HQ/videos"
+                                target="_blank">統計学動画シリーズ</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section id="contact_section">
-            <ul>
-                <li>masanada@gmail.com</li>
-                <li><a href="https://twitter.com/agajo" target="_blank">Twitter(メインアカウント)</a></li>
-                <li><a href="https://twitter.com/agajo_tech" target="_blank">Twitter(アプリ開発関係アカウント)</a></li>
-            </ul>
-            メールよりツイッターの方が頻繁に確認しています
+            <h1>Contact</h1>
+            <div class="section_wrapper">
+
+                <ul>
+                    <li>masanada@gmail.com</li>
+                    <li><a href="https://twitter.com/agajo" target="_blank">Twitter(メインアカウント)</a></li>
+                    <li><a href="https://twitter.com/agajo_tech" target="_blank">Twitter(アプリ開発関係アカウント)</a></li>
+                </ul>
+                メールよりツイッターの方が頻繁に確認しています
+            </div>
         </section>
     </body>
 
