--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,15 @@
     <head>
         <link rel="stylesheet" type="text/css" href="simple_style.css">
         <title>岡竜之介ポートフォリオサイト</title>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+        </style>
     </head>
 
     <body>
         <section id="about_section">
-            <h1>About</h1>
+            <h1>Oka Ryunoske</h1>
             <div class="section_wrapper">
                 <div id="photo">
                     <img src="assets/assets/profile_image.png">
