--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                         <li>Haskell</li>
                         <li>Angular(JavaScript/TypeScript)</li>
                         <li>Django(Python)</li>
-                        <li>数学・物理・統計・英語・etc...</li>
+                        <li>数学・物理・統計・英語etc...</li>
                     </ul>
                 </div>
                 <div id="work_history">
@@ -55,13 +55,12 @@
                 <div id="personality">
                     <h2>Personality</h2>
                     <ul>
-                        <li>自分のスキルアップに余念がない。</li>
+                        <li>自身のスキルアップに余念がない。</li>
                         <li>多趣味。何かができるようになるのが楽しくてたまらない。</li>
                         <li>MBTIはENTP。</li>
                         <li>最近はバク転・バク宙ができるようになりました。</li>
                         <li>圏論とブロックチェーン(Ethereum)を勉強中です。</li>
-                        <li>インプットが楽しすぎてアウトプットが疎かになりがちなのが弱点。誰かに管理してもらうことで解決可能です。</li>
-                        <li>デザインも勉強しましたが苦手です。</li>
+                        <li>デザインも勉強中です。</li>
                     </ul>
                 </div>
             </div>
