--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,16 @@
 <html>
 
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-465060-11"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-465060-11');
+        </script>
+
         <link rel="stylesheet" type="text/css" href="simple_style.css">
         <title>岡竜之介ポートフォリオサイト</title>
         <style>
