--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -11,7 +11,8 @@
 
             gtag('config', 'UA-465060-11');
         </script>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="simple_style.css">
         <title>岡竜之介ポートフォリオサイト</title>
         <style>
