added a link to sagyoba

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,9 @@
                             <a href="https://math-formula-image.oka-ryunoske.work/ja.html"
                                 target="_blank">数式入りの短い文章をブラウザ上でパパっと画像化</a>
                         </li>
+                        <li>
+                            <a href="https://sagyoba.oka-ryunoske.work/" target="_blank">みんなで作業場</a>
+                        </li>
                     </ul>
                 </div>
                 <div id="mobile_apps">
