Update responsive design sizes and modify design

--- a/public/index.html
+++ b/public/index.html
@@ -84,14 +84,20 @@
                     <h2>Web Services</h2>
                     <ul>
                         <li>
-                            <a href="https://flickromaji.oka-ryunoske.work/" target="_blank">フリックとローマジ(タイピング速度測定ゲーム)</a>
+                            <a href="https://flickromaji.oka-ryunoske.work/" target="_blank"
+                                rel="noopener noreferrer">フリックとローマジ(タイピング速度測定ゲーム)</a>
                         </li>
                         <li>
-                            <a href="https://math-formula-image.oka-ryunoske.work/ja.html"
-                                target="_blank">数式入りの短い文章をブラウザ上でパパっと画像化</a>
+                            <a href="https://math-formula-image.oka-ryunoske.work/ja.html" target="_blank"
+                                rel="noopener noreferrer">数式入りの短い文章をブラウザ上でパパっと画像化</a>
                         </li>
                         <li>
-                            <a href="https://sagyoba.oka-ryunoske.work/" target="_blank">みんなで作業場</a>
+                            <a href="https://sagyoba.oka-ryunoske.work/" target="_blank"
+                                rel="noopener noreferrer">みんなで作業場</a>
+                        </li>
+                        <li>
+                            <a href="https://anywhere-stopwatch.oka-ryunoske.work/" target="_blank"
+                                rel="noopener noreferrer">Anywhere&nbsp;Stopwatch</a>
                         </li>
                     </ul>
                 </div>
